added firebase connectivity

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/my-prep-pal.css">
+    <link rel="icon" href="/assets/favicon.ico">
 
     {{content-for "head-footer"}}
   </head>
